high risk content and questions

--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -203,7 +203,15 @@
                                     <!-- Stocks - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/stonks.png" alt="Stonks" style="margin-top: 5%;"/>
                                     <!-- Stocks - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        Stocks, or equities, are a type of security that represents ownership of a company. Well, a fraction of a company, which entitles the owner of the stock to a proportion of the company's assets. Stocks are often referred to as shares, as the owner has a share of the ownership of the company, proportional to their number of stocks.
+                                        <br><br>
+                                        There are two main types of stocks, common and preferred. Common stock are, as the name suggests, the most common and what most people own. They convey an ownership of the company and allow for voting in company meetings. Preferred stock do not convey any voting rights, but if the company collapses and is liquidated, they get paid out their share of ownership before common stock is. A benefit of most companies is limited liability, that is, if a company does fail, the shareholders are not personally liable.
+                                        <br><br>
+                                        People invest in stocks to make money in two main ways. The first is through dividends, which are part of the profits of the company that they pay out to the owners of stocks. This is up to the company and there is no requirement to do so. The second way is through the company becoming more valuable, and the price of the stocks increasing. This leads to a profit when the stock is sold to another investor, however any profits will be subject to Capital Gains Tax if the price did increase.
+                                        <br><br>
+                                        Companies can continue to issue new stocks if they need to raise more money, which dilutes the ownership of all current shareholders due to the higher number of stocks on the market. As this is accompanied with an inflow of cash to the company, issuing new shares should not decrease the price of the stock.
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
@@ -294,7 +302,15 @@
                                     <!-- Risk - Image-->
                                     <img class="img-fluid rounded mb-5" src="static/images/content/risks.png" alt="Risks" style="margin-top: 5%;"/>
                                     <!-- Risk - Text-->
-                                    <p class="mb-5 text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5 text-justify">
+                                        Any conversation about the risks of investing has to start with Bernie Madoff, who ran the largest Ponzi scheme ever. He took money from investors and then simply left it in the bank and used it to fund his lavish lifestyle whilst telling them they were getting decent returns. When those investors wanted their profits, he used the money from other investors to pay them out, and so on, and so on. He was brought down when the market fell in 2008 and too many people wanted their money.
+                                        <br><br>
+                                        There are a range of other investment risks. Market risk is where the value of the entire market decreases. This can be due to economic developments such as a recession or environmental factors such as natural disasters. Liquidity risk is where you cannot cash out your investment when you want, leading to greater exposure than you intend. This is often seen in more illiquid investments such as real estate.
+                                        <br><br>
+                                        Concentration risk is where you put too many of your eggs in one basket. This is common for new investors who don't have the amount of capital to invest that can be spread across many different investments, and are forced to start with just one basket. Inflation risk is where the cost of living is increasing faster than your investments. This often happens by just leaving money in the bank as savings.
+                                        <br><br>
+                                        There are many other risks that may impact your decision to invest or not invest. The best way to avoid these risks is to do your research, understand the investment and the risk it poses, and find something that you are comfortable taking on, knowing the downside. Plus if something seems to good to be true, it probably is.
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-check fa-fw"></i>
                                         Done
