database and controllers

--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -45,6 +45,7 @@
 				<thead>
 					  <tr>
 						<th scope="col">ID</th>
+						<th scope="col">User ID</th>
 						<th scope="col">Category</th>
 						<th scope="col">Score</th>
 						<th scope="col">Timestamp</th>
@@ -52,7 +53,7 @@
 				</thead>
 				<tbody>
 					{% for a in attempts %}
-					<tr><td>{{ a.id }}</td><td>{{ a.category }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
+					<tr><td>{{ a.id }}</td><td>{{ a.user_id }}</td><td>{{ a.category }}</td><td>{{ a.score }}</td><td>{{ a.timestamp }}</td></tr>
 					{% endfor %}
 				</tbody>
 			</table>
