--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       	<div class="container">
-        	<a class="navbar-brand" href="#">Peaks and Troughs</a>
+        	<a class="navbar-brand" href="{{ url_for('index') }}">Peaks and Troughs</a>
        		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               	<span class="navbar-toggler-icon"></span>
             </button>
