progress in model

--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -28,11 +28,15 @@
 				<thead>
 					  <tr>
 						<th scope="col">ID</th>
+						<th scope="col">High A</th>
+						<th scope="col">High B</th>
+						<th scope="col">High C</th>
+						<th scope="col">High D</th>
 					  </tr>
 				</thead>
 				<tbody>
 					{% for p in progress %}
-					<tr><td>{{ p.user_id }}</td></tr>
+					<tr><td>{{ p.user_id }}</td><td>{{ p.high_a }}</td><td>{{ p.high_b }}</td><td>{{ p.high_c }}</td><td>{{ p.high_d }}</td></tr>
 					{% endfor %}
 				</tbody>
 			</table>
