--- a/app/templates/highrisk.html
+++ b/app/templates/highrisk.html
@@ -9,20 +9,20 @@
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
                 <!-- Stock block -->
-                <div class="col-md-6 col-lg-3 mb-5 high_Risk">
+                <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                         <div style="position: relative; width: 250px; height: 200px; margin-top: 20%;">
                             <img class="rounded" src="static/images/content/black.png" width="250" height="200" alt="">
                             {% if progress.high_a %}
-                            <span style="position: absolute; top: 38%; bottom: 30%; left: 33%; color: green; font-size: xx-large;">Stocks</span>
+                            <span style="position: absolute; top: 38%; left: 32%; color: green; font-size: xx-large;">Stocks</span>
                             {% else %}
-                            <span style="position: absolute; top: 38%; bottom: 30%; left: 33%; color: orange; font-size: xx-large;">Stocks</span>
+                            <span style="position: absolute; top: 38%; left: 32%; color: orange; font-size: xx-large;">Stocks</span>
                             {% endif %}
                         </div>
                     </div>
                 </div>
                 <!-- derivatives block -->
-                <div class="col-md-6 col-lg-3 mb-5 high_Risk">
+                <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                         <div style="position: relative; width: 200px; height: 200px; margin-top: 20%;">
                             <img class="rounded" src="static/images/content/black.png" width="250" height="200" alt="">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <!-- cryptocurrency block -->
-                <div class="col-md-6 col-lg-3 mb-5 high_Risk">
+                <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
                         <div style="position: relative; width: 200px; height: 200px; margin-top: 20%;">
                             <img class="rounded" src="static/images/content/black.png" width="250" height="200" alt="">
@@ -48,14 +48,14 @@
                     </div>
                 </div>
                 <!-- Risk block-->
-                <div class="col-md-6 col-lg-3 mb-5 high_Risk">
+                <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
                         <div style="position: relative; width: 250px; height: 200px; margin-top: 20%;">
                             <img class="rounded" src="static/images/content/black.png" width="250" height="200" alt="">
                             {% if progress.high_d %}
-                            <span style="position: absolute; top: 38%; left: 38%; color: green; font-size: xx-large;">Risks</span>
+                            <span style="position: absolute; top: 38%; left: 36%; color: green; font-size: xx-large;">Risks</span>
                             {% else %}
-                            <span style="position: absolute; top: 38%; left: 38%; color: orange; font-size: xx-large;">Risks</span>
+                            <span style="position: absolute; top: 38%; left: 36%; color: orange; font-size: xx-large;">Risks</span>
                             {% endif %}
                         </div>
                     </div>
