--- a/app/templates/highrisk.html
+++ b/app/templates/highrisk.html
@@ -99,6 +99,7 @@
                                     <form action="" method="post">
                                         {{ form.hidden_tag() }}
                                         <input type="submit" name="high_a" value="Done">
+                                        <input type="submit" name="" value="Close">
                                     </form>
                                 </div>
                             </div>
@@ -132,6 +133,7 @@
                                     <form action="" method="post">
                                         {{ form.hidden_tag() }}
                                         <input type="submit" name="high_b" value="Done">
+                                        <input type="submit" name="" value="Close">
                                     </form>
                                 </div>
                             </div>
@@ -165,6 +167,7 @@
                                     <form action="" method="post">
                                         {{ form.hidden_tag() }}
                                         <input type="submit" name="high_c" value="Done">
+                                        <input type="submit" name="" value="Close">
                                     </form>
                                 </div>
                             </div>
@@ -198,6 +201,7 @@
                                     <form action="" method="post">
                                         {{ form.hidden_tag() }}
                                         <input type="submit" name="high_d" value="Done">
+                                        <input type="submit" name="" value="Close">
                                     </form>
                                 </div>
                             </div>
